force-app/main/default/objects/TPM_ZCodeDefinition__mdt/TPM_ZCodeDefinition__mdt.object-meta.xml
<CustomObject>
    <description>ZCode Pricing Condition Definition</description>
    <label>ZCode Pricing Condition Definition</label>
    <pluralLabel>ZCode Pricing Condition Definitions</pluralLabel>
</CustomObject>