force-app/main/default/objects/TPM_ZCodeDefinition__mdt/fields/TPM_Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>TPM_Measure_Code__c</fullName>
    <label>Measure Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>