force-app/main/default/objects/TPM_ZCodeDefinition__mdt/fields/TPM_PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>TPM_PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deduction</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>OnInvoice</fullName>
            </value>
            <value>
                <fullName>OffInvoice</fullName>
            </value>
            <value>
                <fullName>OI</fullName>
            </value>
            <value>
                <fullName>Billback/Retrospective</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>