force-app/main/default/objects/TPM_ZCodeDefinition__mdt/fields/TPM_PromotionType__c.field-meta.xml
<CustomField>
    <fullName>TPM_PromotionType__c</fullName>
    <label>Promotion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Display Shipper</fullName>
            </value>
            <value>
                <fullName>EDLP</fullName>
            </value>
            <value>
                <fullName>LTA</fullName>
            </value>
            <value>
                <fullName>Short Term Event</fullName>
            </value>
            <value>
                <fullName>Other Programs</fullName>
            </value>
            <value>
                <fullName>Volume Push</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>