force-app/main/default/objects/TPM_ZCodeDefinition__mdt/fields/TPM_RateBasis__c.field-meta.xml
<CustomField>
    <fullName>TPM_RateBasis__c</fullName>
    <label>Rate Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LumpSum</fullName>
            </value>
            <value>
                <fullName>WeeklyLumpSum</fullName>
            </value>
            <value>
                <fullName>PerCase</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>