force-app/main/default/objects/TPM_ZCodeDefinition__mdt/fields/TPM_SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>TPM_SalesOrg__c</fullName>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US01</fullName>
            </value>
            <value>
                <fullName>IT01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>