force-app/main/default/objects/TPM_ZCodeDefinition__mdt/fields/TPM_TacticType__c.field-meta.xml
<CustomField>
    <fullName>TPM_TacticType__c</fullName>
    <label>Tactic Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logistic Discount</fullName>
            </value>
            <value>
                <fullName>Distributor Discounts</fullName>
            </value>
            <value>
                <fullName>Consumer Price Reduction</fullName>
            </value>
            <value>
                <fullName>Consumer Price Reduction - Extra OI</fullName>
            </value>
            <value>
                <fullName>LTA</fullName>
            </value>
            <value>
                <fullName>LTA - OI Extra</fullName>
            </value>
            <value>
                <fullName>Display Shipper</fullName>
            </value>
            <value>
                <fullName>Cash Discounts</fullName>
            </value>
            <value>
                <fullName>EDLP</fullName>
            </value>
            <value>
                <fullName>Placement Fees</fullName>
            </value>
            <value>
                <fullName>Short Term Allowance</fullName>
            </value>
            <value>
                <fullName>Data / Market Research</fullName>
            </value>
            <value>
                <fullName>Displays and Fixtures</fullName>
            </value>
            <value>
                <fullName>In-Store Merchandising Labor</fullName>
            </value>
            <value>
                <fullName>Other Sales Deductions</fullName>
            </value>
            <value>
                <fullName>Shopper Marketing Agency</fullName>
            </value>
            <value>
                <fullName>Shopper Marketing Execution</fullName>
            </value>
            <value>
                <fullName>100% TPR</fullName>
            </value>
            <value>
                <fullName>Digital Media</fullName>
            </value>
            <value>
                <fullName>Influencer &amp; Professionals</fullName>
            </value>
            <value>
                <fullName>LTA Fixed</fullName>
            </value>
            <value>
                <fullName>Stickering Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>