force-app/main/default/objects/TPM_ZCodeDefinition__mdt/fields/TPM_ZCode__c.field-meta.xml
<CustomField>
    <fullName>TPM_ZCode__c</fullName>
    <description>ZCode</description>
    <label>ZCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>