force-app/main/default/objects/TPM_ZCodeDefinition__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>TPM_ZCode__c</columns>
    <columns>TPM_PromotionType__c</columns>
    <columns>TPM_TacticType__c</columns>
    <columns>TPM_SalesOrg__c</columns>
    <columns>TPM_Measure_Code__c</columns>
    <columns>TPM_PaymentMethod__c</columns>
    <columns>TPM_RateBasis__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>